--- a/package.json
+++ b/package.json
@@ -1,35 +1,59 @@
 {
   "private": true,
+  "main": "build/main.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "next:dev": "next dev",
+    "next:build": "next build",
+    "electron:build": "tsup",
+    "electron:build_watch": "tsup --watch",
+    "electron:watch": "cross-env NODE_ENV='development' nodemon",
+    "electron:dev": "npm-run-all --parallel electron:build_watch electron:watch",
+    "dev": "npm-run-all --parallel electron:dev next:dev"
   },
   "dependencies": {
+    "@ai-sdk/groq": "^1.1.7",
+    "@electron-toolkit/utils": "^3.0.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "ai": "^4.1.16",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.4",
+    "framer-motion": "^12.0.6",
+    "get-port-please": "^3.1.2",
     "lucide-react": "^0.468.0",
     "next": "latest",
     "next-themes": "^0.4.3",
     "prettier": "^3.3.3",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "react-intersection-observer": "^9.15.1",
+    "shiki": "^2.2.0",
+    "zod": "^3.24.1",
+    "zod-to-json-schema": "^3.24.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@swc/core": "^1.10.12",
+    "@swc/helpers": "^0.5.15",
     "@types/node": "22.10.2",
     "@types/react": "^19.0.2",
     "@types/react-dom": "19.0.2",
+    "cross-env": "^7.0.3",
+    "electron": "^34.0.2",
+    "electron-builder": "^25.1.8",
+    "nodemon": "^3.1.9",
+    "npm-run-all": "^4.1.5",
     "postcss": "8.4.49",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.4.17",
     "tailwindcss-animate": "^1.0.7",
+    "tsup": "^8.3.6",
     "typescript": "5.7.2"
   }
 }
