--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-intersection-observer": "^9.15.1",
+    "react-textarea-autosize": "^8.5.7",
     "shiki": "^2.2.0",
     "zod": "^3.24.1",
     "zod-to-json-schema": "^3.24.1",
