--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@upstash/redis": "^1.34.4",
     "ai": "^4.1.16",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.0",
