--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
+    "emoji-picker-react": "^4.12.0",
     "framer-motion": "^12.0.6",
     "get-port-please": "^3.1.2",
     "lucide-react": "^0.468.0",
@@ -46,6 +47,7 @@
     "next-themes": "^0.4.3",
     "prettier": "^3.3.3",
     "react": "19.0.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "19.0.0",
     "react-intersection-observer": "^9.15.1",
     "react-textarea-autosize": "^8.5.7",
