--- a/package.json
+++ b/package.json
@@ -33,24 +33,42 @@
     "@radix-ui/react-toast": "^1.2.6",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@types/highlight.js": "^10.1.0",
+    "@types/markdown-it": "^14.1.2",
+    "@types/marked": "^6.0.0",
+    "@types/prismjs": "^1.26.5",
     "@upstash/redis": "^1.34.4",
     "ai": "^4.1.34",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
+    "developer-icons": "^5.2.9",
     "emoji-picker-react": "^4.12.0",
     "framer-motion": "^12.0.6",
     "get-port-please": "^3.1.2",
+    "highlight.js": "^11.11.1",
+    "isomorphic-dompurify": "^2.21.0",
     "lucide-react": "^0.468.0",
+    "markdown-it": "^14.1.0",
+    "marked": "^15.0.7",
+    "marked-base-url": "^1.1.6",
+    "marked-gfm-heading-id": "^4.1.1",
+    "marked-highlight": "^2.2.1",
+    "marked-mangle": "^1.1.10",
     "next": "latest",
     "next-themes": "^0.4.3",
     "prettier": "^3.3.3",
+    "prismjs": "^1.29.0",
     "react": "19.0.0",
     "react-colorful": "^5.6.1",
     "react-dom": "19.0.0",
     "react-intersection-observer": "^9.15.1",
+    "react-markdown": "^9.0.3",
+    "react-syntax-highlighter": "^15.6.1",
     "react-textarea-autosize": "^8.5.7",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "shiki": "^2.2.0",
     "zod": "^3.24.1",
     "zod-to-json-schema": "^3.24.1",
@@ -62,6 +80,7 @@
     "@types/node": "22.10.2",
     "@types/react": "^19.0.2",
     "@types/react-dom": "19.0.2",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "cross-env": "^7.0.3",
     "electron": "^34.0.2",
     "electron-builder": "^25.1.8",
