Refactor Markdown Renderer with Enhanced Parsing and Styling
- Simplified markdown-it configuration with improved token processing
- Added custom inline code and list item rendering
- Improved content preprocessing to handle bullet points and descriptions
- Enhanced markdown rendering performance and readability
- Implemented more robust token handling and sanitization
- Added consistent styling for markdown elements with Tailwind classes
- Improved code block and inline code highlighting

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "isomorphic-dompurify": "^2.21.0",
     "lucide-react": "^0.468.0",
     "markdown-it": "^14.1.0",
+    "markdown-it-jsx": "^1.1.0",
     "marked": "^15.0.7",
     "marked-base-url": "^1.1.6",
     "marked-gfm-heading-id": "^4.1.1",
