--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "npm-run-all --parallel electron:dev next:dev"
   },
   "dependencies": {
+    "@agentic/ai-sdk": "^7.3.1",
     "@ai-sdk/anthropic": "^1.1.6",
     "@ai-sdk/cerebras": "^0.1.8",
     "@ai-sdk/cohere": "^1.1.7",
@@ -24,11 +25,14 @@
     "@ai-sdk/togetherai": "^0.1.9",
     "@ai-sdk/xai": "^1.1.8",
     "@electron-toolkit/utils": "^3.0.0",
+    "@langchain/openai": "^0.4.4",
     "@lobehub/icons": "^1.68.0",
     "@openrouter/ai-sdk-provider": "^0.2.0",
+    "@pinecone-database/pinecone": "^5.0.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.6",
     "@supabase/ssr": "latest",
