--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "@lobehub/icons": "^1.68.0",
     "@openrouter/ai-sdk-provider": "^0.2.0",
     "@pinecone-database/pinecone": "^5.0.0",
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.6",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "@types/highlight.js": "^10.1.0",
@@ -44,7 +46,7 @@
     "@upstash/redis": "^1.34.4",
     "ai": "^4.1.34",
     "autoprefixer": "10.4.20",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "developer-icons": "^5.2.9",
@@ -75,6 +77,7 @@
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "shiki": "^2.2.0",
+    "sonner": "^2.0.1",
     "zod": "^3.24.1",
     "zod-to-json-schema": "^3.24.1",
     "zustand": "^5.0.3"
@@ -92,7 +95,7 @@
     "nodemon": "^3.1.9",
     "npm-run-all": "^4.1.5",
     "postcss": "8.4.49",
-    "tailwind-merge": "^2.5.2",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "tsup": "^8.3.6",
