--- a/package.json
+++ b/package.json
@@ -34,15 +34,18 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "@types/highlight.js": "^10.1.0",
     "@types/markdown-it": "^14.1.2",
     "@types/marked": "^6.0.0",
     "@types/prismjs": "^1.26.5",
+    "@upstash/qstash": "^2.7.22",
     "@upstash/redis": "^1.34.4",
     "ai": "^4.1.34",
     "autoprefixer": "10.4.20",
@@ -55,6 +58,7 @@
     "get-port-please": "^3.1.2",
     "highlight.js": "^11.11.1",
     "isomorphic-dompurify": "^2.21.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.468.0",
     "markdown-it": "^14.1.0",
     "markdown-it-jsx": "^1.1.0",
@@ -70,6 +74,7 @@
     "react": "19.0.0",
     "react-colorful": "^5.6.1",
     "react-dom": "19.0.0",
+    "react-hotkeys-hook": "^4.6.1",
     "react-intersection-observer": "^9.15.1",
     "react-markdown": "^9.0.3",
     "react-syntax-highlighter": "^15.6.1",
@@ -78,6 +83,7 @@
     "remark-gfm": "^4.0.1",
     "shiki": "^2.2.0",
     "sonner": "^2.0.1",
+    "use-stick-to-bottom": "^1.0.46",
     "zod": "^3.24.1",
     "zod-to-json-schema": "^3.24.1",
     "zustand": "^5.0.3"
@@ -85,6 +91,7 @@
   "devDependencies": {
     "@swc/core": "^1.10.12",
     "@swc/helpers": "^0.5.15",
+    "@types/lodash": "^4.17.15",
     "@types/node": "22.10.2",
     "@types/react": "^19.0.2",
     "@types/react-dom": "19.0.2",
