--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ai-sdk/togetherai": "^0.1.9",
     "@ai-sdk/xai": "^1.1.8",
     "@electron-toolkit/utils": "^3.0.0",
+    "@icons-pack/react-simple-icons": "^12.0.0",
     "@langchain/openai": "^0.4.4",
     "@lobehub/icons": "^1.68.0",
     "@openrouter/ai-sdk-provider": "^0.2.0",
@@ -78,12 +79,12 @@
     "react-dom": "19.0.0",
     "react-hotkeys-hook": "^4.6.1",
     "react-intersection-observer": "^9.15.1",
-    "react-markdown": "^9.0.3",
+    "react-markdown": "^9.1.0",
     "react-syntax-highlighter": "^15.6.1",
     "react-textarea-autosize": "^8.5.7",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
-    "shiki": "^2.2.0",
+    "shiki": "^2.5.0",
     "sonner": "^2.0.1",
     "use-stick-to-bottom": "^1.0.46",
     "zod": "^3.24.1",
