--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "react-colorful": "^5.6.1",
     "react-dom": "19.0.0",
     "react-hotkeys-hook": "^4.6.1",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.15.1",
     "react-markdown": "^9.1.0",
     "react-syntax-highlighter": "^15.6.1",
