Implement File Attachment and Electron File Search Integration
- Added file selection and attachment capabilities to chat input
- Integrated Electron API for local file searching and reading
- Enhanced UnifiedInput component to support file mentions and attachments
- Implemented file content processing in chat API route
- Added file preview and removal functionality in chat interface
- Updated Electron main process with robust file search and read methods
- Improved markdown rendering to support file mentions

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "next:dev": "next dev --turbopack",
     "next:build": "next build",
-    "electron:build": "tsup",
-    "electron:build_watch": "tsup --watch",
+    "electron:build": "tsc -p electron/tsconfig.json",
+    "electron:build_watch": "tsc -p electron/tsconfig.json --watch",
     "electron:watch": "cross-env NODE_ENV='development' nodemon",
     "electron:dev": "npm-run-all --parallel electron:build_watch electron:watch",
     "dev": "npm-run-all --parallel electron:dev next:dev"
