--- a/package.json
+++ b/package.json
@@ -117,5 +117,9 @@
   "overrides": {
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4"
-  }
+  },
+  "mac": {
+  "entitlements": "entitlements.plist",
+  "entitlementsInherit": "entitlements.plist"
+}
 }
