--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "@upstash/qstash": "^2.7.22",
     "@upstash/redis": "^1.34.4",
     "ai": "^4.1.34",
-    "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -97,6 +96,7 @@
   "devDependencies": {
     "@swc/core": "^1.10.12",
     "@swc/helpers": "^0.5.15",
+    "@tailwindcss/postcss": "^4.0.12",
     "@types/lodash": "^4.17.15",
     "@types/node": "22.10.2",
     "@types/react": "19.0.10",
@@ -109,7 +109,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "8.4.49",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss": "3.4.17",
+    "tailwindcss": "^4.0.12",
     "tailwindcss-animate": "^1.0.7",
     "tsup": "^8.3.6",
     "typescript": "5.7.2"
@@ -119,7 +119,7 @@
     "@types/react-dom": "19.0.4"
   },
   "mac": {
-  "entitlements": "entitlements.plist",
-  "entitlementsInherit": "entitlements.plist"
-}
+    "entitlements": "entitlements.plist",
+    "entitlementsInherit": "entitlements.plist"
+  }
 }
