--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "main": "build/main.js",
   "scripts": {
-    "next:dev": "next dev --turbopack",
+    "next:dev": "next dev",
     "next:build": "next build",
     "electron:build": "tsc -p electron/tsconfig.json",
     "electron:build_watch": "tsc -p electron/tsconfig.json --watch",
@@ -62,6 +62,7 @@
     "get-port-please": "^3.1.2",
     "highlight.js": "^11.11.1",
     "isomorphic-dompurify": "^2.21.0",
+    "latest": "^0.2.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.468.0",
     "markdown-it": "^14.1.0",
@@ -71,7 +72,7 @@
     "marked-gfm-heading-id": "^4.1.1",
     "marked-highlight": "^2.2.1",
     "marked-mangle": "^1.1.10",
-    "next": "15.2.0",
+    "next": "15.2.1",
     "next-themes": "^0.4.3",
     "prettier": "^3.3.3",
     "prismjs": "^1.29.0",
