--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/highlight.js": "^10.1.0",
     "@types/markdown-it": "^14.1.2",
     "@types/marked": "^6.0.0",
+    "@types/node-fetch": "^2.6.12",
     "@types/prismjs": "^1.26.5",
     "@upstash/qstash": "^2.7.22",
     "@upstash/redis": "^1.34.4",
@@ -74,6 +75,7 @@
     "marked-mangle": "^1.1.10",
     "next": "15.2.1",
     "next-themes": "^0.4.3",
+    "node-fetch": "^3.3.2",
     "prettier": "^3.3.3",
     "prismjs": "^1.29.0",
     "react": "19.0.0",
