--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "node-fetch": "^3.3.2",
     "prettier": "^3.3.3",
     "prismjs": "^1.29.0",
+    "rate-limiter-flexible": "^6.0.0",
     "react": "19.0.0",
     "react-colorful": "^5.6.1",
     "react-dom": "19.0.0",
