--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "electron/**/*", "types/**/*.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "../vinci-api/src/utils/server.ts", "../vinci-api/pinecone.ts", "src/core", "src/services", "src/store", "src/utils"],
+  "include": ["next-env.d.ts", "electron/**/*", "types/**/*.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "../vinci-api/src/utils/server.ts", "../vinci-api/pinecone.ts", "src/core", "src/services", "src/store", "src/lib/utils"],
   "exclude": ["node_modules"]
 }
