--- a/package.json
+++ b/package.json
@@ -2,16 +2,12 @@
   "name": "vinci",
   "version": "0.0.1",
   "private": true,
-  "main": "build/electron/main.js",
+  "main": "out/main/index.js",
   "scripts": {
-    "next:dev": "next dev",
-    "next:build": "next build",
-    "electron:build": "tsc -p electron/tsconfig.json",
-    "electron:build_watch": "tsc -p electron/tsconfig.json --watch",
-    "electron:watch": "cross-env NODE_ENV='development' nodemon -r ./register.js --exec electron ./build/electron/main.js",
-    "electron:dev": "npm-run-all --parallel electron:build_watch electron:watch",
-    "dev": "npm-run-all --parallel electron:dev next:dev",
-    "start": "electron-forge start",
+    "dev": "electron-vite dev",
+    "build": "electron-vite build",
+    "preview": "electron-vite preview",
+    "start": "electron ./out/main/index.js",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish"
@@ -49,8 +45,6 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
-    "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "@types/highlight.js": "^10.1.0",
     "@types/markdown-it": "^14.1.2",
@@ -81,7 +75,6 @@
     "marked-gfm-heading-id": "^4.1.1",
     "marked-highlight": "^2.2.1",
     "marked-mangle": "^1.1.10",
-    "next": "15.2.1",
     "next-themes": "^0.4.3",
     "node-fetch": "^3.3.2",
     "prettier": "^3.3.3",
@@ -94,6 +87,7 @@
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.15.1",
     "react-markdown": "^9.1.0",
+    "react-router-dom": "^7.3.0",
     "react-syntax-highlighter": "^15.6.1",
     "react-textarea-autosize": "^8.5.7",
     "rehype-raw": "^7.0.0",
@@ -118,8 +112,10 @@
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@vitejs/plugin-react": "^4.3.4",
     "cross-env": "^7.0.3",
     "electron": "^34.0.2",
+    "electron-vite": "^3.0.0",
     "nodemon": "^3.1.9",
     "npm-run-all": "^4.1.5",
     "postcss": "8.4.49",
@@ -128,7 +124,8 @@
     "tailwindcss-animate": "^1.0.7",
     "tsconfig-paths": "^4.2.0",
     "tsup": "^8.3.6",
-    "typescript": "5.7.2"
+    "typescript": "5.7.2",
+    "vite": "^6.2.2"
   },
   "overrides": {
     "@types/react": "19.0.10",
