Enhance TypeScript configuration and refactor imports for improved module resolution. Add path aliases for components, services, core, types, utils, store, and electron directories. Remove unused types and comments to streamline codebase and improve maintainability. Update import statements across various files to utilize new path aliases, ensuring consistency and clarity in module references.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,14 @@
     "jsx": "react-jsx",
     "incremental": true,
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@components/*": ["./src/components/*"],
+      "@services/*": ["./src/services/*"],
+      "@core/*": ["./src/core/*"],
+      "@types/*": ["./src/types/*"],
+      "@utils/*": ["./src/utils/*"],
+      "@store/*": ["./src/store/*"],
+      "@electron/*": ["./electron/*"]
     }
   },
   "include": ["electron/**/*", "types/**/*.d.ts", "**/*.ts", "**/*.tsx", "src/**/*"],
